@@ -1,5 +1,6 @@
 package kth.wiljam.fullstackusers;
 
+import com.nimbusds.jose.proc.SecurityContext;
 import kth.wiljam.fullstackusers.controller.UserController;
 import kth.wiljam.fullstackusers.model.User;
 import kth.wiljam.fullstackusers.services.UserService;
@@ -11,10 +12,14 @@ import org.springframework.boot.test.context.SpringBootTest;
 import org.springframework.boot.test.mock.mockito.MockBean;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
+import org.springframework.security.core.Authentication;
+import org.springframework.security.core.context.SecurityContextHolder;
+import org.springframework.security.oauth2.jwt.Jwt;
+import org.springframework.security.oauth2.jwt.JwtClaimNames;
+import org.springframework.security.oauth2.server.resource.authentication.JwtAuthenticationToken;
+import org.springframework.security.test.context.support.WithMockUser;
 
-import java.util.Arrays;
-import java.util.List;
-import java.util.NoSuchElementException;
+import java.util.*;
 
 import static org.junit.jupiter.api.Assertions.*;
 import static org.mockito.ArgumentMatchers.any;
@@ -28,8 +33,9 @@ class UserControllerTest {
 
     @MockBean
     private UserService userService;
-    /*
+
     @Test
+    @WithMockUser
     void newUser() {
         User inputUser = new User();
         when(userService.create(any(User.class))).thenReturn(inputUser);
@@ -42,16 +48,32 @@ class UserControllerTest {
 
     @Test
     void getAllUsers() {
-        List<User> users = Arrays.asList(new User(), new User());
-        when(userService.getAllUsers()).thenReturn(users);
+        List<User> expectedUsers = Arrays.asList(new User(), new User());
+        when(userService.getAllUsers()).thenReturn(expectedUsers);
+
+        Map<String, Object> claims = Map.of(
+                JwtClaimNames.SUB, "user",
+                "realm_access", Map.of("roles", List.of("default-roles-patient-keycloak"))
+        );
+        Jwt jwt = Jwt.withTokenValue("token")
+                .header("alg", "none")
+                .claims(claimMap -> claimMap.putAll(claims))
+                .build();
+
+        JwtAuthenticationToken authentication = new JwtAuthenticationToken(jwt, Collections.emptyList());
+
+        SecurityContextHolder.getContext().setAuthentication(authentication);
 
         List<User> result = userController.getAllUsers();
 
-        assertEquals(users, result);
+        assertEquals(expectedUsers, result);
         verify(userService, times(1)).getAllUsers();
+
+        SecurityContextHolder.clearContext();
     }
 
     @Test
+    @WithMockUser
     void getAllPatients() {
         List<User> patients = Arrays.asList(new User(), new User());
         when(userService.getUsersWithPatientIdNotNull()).thenReturn(patients);
@@ -63,6 +85,7 @@ class UserControllerTest {
     }
 
     @Test
+    @WithMockUser
     void getUserById() {
         long userId = 1L;
         User user = new User();
@@ -75,6 +98,7 @@ class UserControllerTest {
     }
 
     @Test
+    @WithMockUser
     void getUserByUsername() {
         String username = "testUser";
         User user = new User();
@@ -87,6 +111,7 @@ class UserControllerTest {
     }
 
     @Test
+    @WithMockUser
     void checkLogin_ValidUser() {
         User inputUser = new User();
         when(userService.checkValidLogin(any(User.class))).thenReturn(inputUser);
@@ -99,6 +124,7 @@ class UserControllerTest {
     }
 
     @Test
+    @WithMockUser
     void checkLogin_InvalidUser() {
         User inputUser = new User();
         when(userService.checkValidLogin(any(User.class))).thenThrow(new NoSuchElementException());
@@ -109,5 +135,4 @@ class UserControllerTest {
         assertNull(response.getBody());
         verify(userService, times(1)).checkValidLogin(inputUser);
     }
-    */
 }
